Testing if setting display to block and setting fixed height fixes layout issues with symbols during scramble text animation. Note the layout issue I'm referring to is that when the text scrambles rest of content (code icon, page) moves unexpectedly. Also, fixed the desktop nav layout issues with skills and interests being broken up into two lines instead of one by increasing lower bound of clamp function for width

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ main {
  */
 .limit-symbols {
     max-width: 100%;
+    display: block;
+    height: 150px;
 
     overflow: hidden;
 
@@ -90,10 +92,16 @@ main {
 
 
 #limit-title {
+    /*
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     word-wrap: break-word;
+    
+    display: block;
+    height: 100px;
+    border: solid 2px red;
+    */
 }
 
 .title {
@@ -834,7 +842,7 @@ a {
     #desktop-nav {
         display: block;
         /* width 700px */
-        width: calc(clamp(700px, 55vw, 800px));
+        width: clamp(720px, 55vw, 800px);
 
     }
 
